plugins {
	id 'java-library'
}

group = "ru.resql"

repositories {
	mavenLocal()
	mavenCentral()
}

compileJava   {
	sourceCompatibility = '1.9'	// With minimum update can be downgraded to 1.8. But not lower
	targetCompatibility = '1.9'
}

java {
	withJavadocJar()
	withSourcesJar()
}

compileTestJava   {
	sourceCompatibility = '9'
	targetCompatibility = '9'
/*	options.compilerArgs += ["--enable-preview"] */
}

dependencies {
	compile 'ch.qos.logback:logback-classic:1.1.3', 'org.reflections:reflections:0.9.11'

	compileOnly "org.projectlombok:lombok:1.18.2"
	annotationProcessor "org.projectlombok:lombok:1.18.2"
	testCompileOnly "org.projectlombok:lombok:1.18.2"
	testAnnotationProcessor "org.projectlombok:lombok:1.18.2"

	testCompile "com.zaxxer:HikariCP:2.4.7", "org.postgresql:postgresql:42.2.14"
	testImplementation('org.junit.jupiter:junit-jupiter-engine:5.6.2')
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}

jar {
	manifest {
		attributes( "Implementation-Title": "reSql streaming library",
				"Implementation-Version": version )
	}
}
